# web-to-audiobook

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_dependencies.py  docker-compose.yml  env-example.env  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.sh
app/: __init__.py  app-main.py  config.py  logging.py  main.py
app/models/: __init__.py  content.py  tts.py
app/routers/: __init__.py  content_extraction.py  health-router.py  routers-init.py  tts.py
app/services/: __init__.py  http_client.py
app/services/content_extraction/: __init__.py  base.py  jina_extractor.py
app/services/tts/: __init__.py  base.py  local_tts.py  openai_tts.py
services/: __init__.py
tests/: conftest.py  run_coverage.py  test-logging.py  test_basic.py  test_config.py  test_datetime_compat.py  test_health.py  test_logging.py  test_pydantic_models.py  test_tts_service.py
tests/integration/: test_content_extraction.py
tests/routers/: test_content_extraction.py
tests/services/: __init__.py  test_jina_extractor.py
utils/: __init__.py
